# plotly_extend_wrapper

./: .gitignore  LICENSE  README.md  codecov.yaml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy_pages.yaml  pypi_release.yml  unittest.yml
docs/: conf.py  index.rst
docs/source/: index.rst  introduction.md  wrapper.md
plotly_extend_wrapper/: __init__.py  common.py  release_library.sh  updater.py  wrapper.py
test/: test_common.py  test_updater.py  test_wrapper.py
