[project]
name = "plotly-extend-wrapper"
version = "1.1.0"
authors = [
    { name = "Laplusdestiny", email = "prayonshootingstars@gmail.com" }
]
dependencies = [
    "plotly>=5.15.0",
    "kaleido==0.2.1",
    "pyarrow>=10.0.0",
    "pandas>=2.0.0",
    "scipy>=1.12.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.0",
    "ipykernel>=6.29.4",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "scikit-learn>=1.5.1",
    "twine>=5.1.1",
    "wheel>=0.43.0",
    "build>=1.2.1",
    "sphinx>=7.3.7",
    "myst-parser>=3.0.1",
    "furo>=2024.5.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["plotly_extend_wrapper/"]
